--- a/styles/style.scss
+++ b/styles/style.scss
@@ -400,6 +400,36 @@ header {
     }
 }
 
+.es-projects {
+    background-color: #D75923;
+    padding: 40px 0px;
+    color: white;
+
+    h2 {
+        text-align: center;
+        letter-spacing: 5px;
+        font-size: 40px;
+    }
+
+    .wrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        img {
+            max-width: 50%;
+
+            @include phone {
+                max-width: 100%;
+            }
+        }
+
+        p {
+            text-align: center;
+        }
+    }
+}
+
 .contact {
     padding: 40px 0px;
     background: #ECB27D;
