--- a/styles/style.scss
+++ b/styles/style.scss
@@ -151,6 +151,70 @@ ul {
     }
 }
 
+// SWIPER
+
+.swiper-slide {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    img {
+        max-width: 80%;
+        max-height: 80%;
+    }
+}
+
+.swiper-container {
+    height: 100%;
+}
+
+.swiper-button-next:after {
+    color: #D75923;
+}
+
+.swiper-button-prev:after {
+    color: #D75923;
+}
+
+.modal {
+    background: rgba(0,0,0,0.8);
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 10;
+
+    .close-btn {
+        position: absolute;
+        right: 0;
+        margin: 40px;
+        cursor: pointer;
+        z-index: 10;
+
+        img {
+            height: 50px;
+        }
+    }
+
+    .modal-image {
+        height: 100%;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        img {
+            max-width: 80%;
+            max-height: 80%;
+        }
+    }
+
+    .images-list {
+        display: flex;
+    }
+}
+
 header {
     position: fixed;
     top: 0;
@@ -426,6 +490,47 @@ header {
 
         p {
             text-align: center;
+        }
+    }
+}
+
+.gallery {
+    padding: 40px 0px;
+
+    h2 {
+        text-align: center;
+    }
+
+    .images-container {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        place-items: center;
+
+        @include phone {
+            grid-template-columns: 1fr 1fr;
+        }
+
+        .item {
+            width: 200px;
+            height: 200px;
+            border: 1px solid black;
+
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: contain;
+                // max-width: 100%;
+                // height: auto;
+                cursor: pointer;
+            }
+        }
+
+        .background-item {
+            background-image: url(https://unsplash.it/1200/700);
+            background-position: center;
+            background-size: cover;
+            width: 200px;
+            height: 200px;
         }
     }
 }
