--- a/styles/style.scss
+++ b/styles/style.scss
@@ -498,6 +498,8 @@ header {
     padding: 40px 0px;
 
     h2 {
+        font-size: 40px;
+        letter-spacing: 5px;
         text-align: center;
     }
 
